[package]
name = "hex2d"
version = "0.2.0"
authors = [ "Dawid Ciężarkiewicz <dpc@dpc.pw>" ]
description = "Helper library for working with 2d hex-grid maps"
documentation = "https://docs.rs/hex2d/"
repository = "https://github.com/dpc/hex2d-rs"
homepage = "https://github.com/dpc/hex2d-rs"
readme = "README.md"
keywords = ["game", "map", "hex", "hexagonal", "coordinate"]
license = "MIT"

[lib]
name = "hex2d"
path = "src/lib.rs"


[dependencies]
num = "0.1"
rand = "0.4"
rustc-serialize = "0.3"
