[package]
name = "hex2d"
version = "0.3.0"
authors = [ "Dawid Ciężarkiewicz <dpc@dpc.pw>" ]
description = "Helper library for working with 2d hex-grid maps"
documentation = "https://docs.rs/hex2d/"
repository = "https://github.com/dpc/hex2d-rs"
homepage = "https://github.com/dpc/hex2d-rs"
readme = "README.md"
keywords = ["game", "map", "hex", "hexagonal", "coordinate"]
license = "MIT"

[lib]
name = "hex2d"
path = "src/lib.rs"

[features]
default = [ "serde-serde" ]
# Needs a different name due to: https://github.com/rust-lang/cargo/issues/1286
serde-serde = ["serde", "serde_derive"]

[dependencies]
num = "0.1"
rand = "0.4"

serde = { version="1.0", optional=true }
serde_derive = { version="1.0", optional=true }
